src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Alliance_Source1__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Alliance Source1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMD Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Avocent (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>BDT (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Brocade (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>CIS (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>EATON (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>EG APJeC FY15 Fusion-IO (SNI) AllainceMDF</fullName>
                </value>
                <value>
                    <fullName>Emulex (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Hitachi (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Intel HPSA Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Intel IIP Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MICRON (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MS FLP Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MS JMA (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MS Rebate (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MS ROK Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Oracle (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Qlogic (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Quantum (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>RedHat Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>RITTAL (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Seagate (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>SEAGATE (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Sepaton Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>SMART (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>SNI Broadcom Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Tandberg Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>UPG (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>VMWARE Alliance Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alliance_Source2_Budget1__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Alliance Source2 Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alliance_Source2__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Alliance Source2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMD Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Avocent (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>BDT (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Brocade (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>CIS (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>EATON (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>EG APJeC FY15 Fusion-IO (SNI) AllainceMDF</fullName>
                </value>
                <value>
                    <fullName>Emulex (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Hitachi (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Intel HPSA Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Intel IIP Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MICRON (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MS FLP Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MS JMA (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MS Rebate (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MS ROK Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Oracle (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Qlogic (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Quantum (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>RedHat Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>RITTAL (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Seagate (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>SEAGATE (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Sepaton Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>SMART (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>SNI Broadcom Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Tandberg Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>UPG (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>VMWARE Alliance Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alliance_Source3__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Alliance Source3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMD Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Avocent (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>BDT (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Brocade (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>CIS (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>EATON (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Emulex (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>EG APJeC FY15 Fusion-IO (SNI) AllainceMDF</fullName>
                </value>
                <value>
                    <fullName>Hitachi (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Intel HPSA Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Intel IIP Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MICRON (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MS FLP Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MS JMA (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MS Rebate (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>MS ROK Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Oracle (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Qlogic (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Quantum (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>RedHat Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>RITTAL (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Seagate (HPSD) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>SEAGATE (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Sepaton Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>SMART (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>SNI Broadcom Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>Tandberg Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>UPG (SNI) Alliance Fund</fullName>
                </value>
                <value>
                    <fullName>VMWARE Alliance Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alliance_source1_Budget__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Alliance Source1 Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alliance_source3_Budget__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Alliance Source3 Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_18_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_ID_MS__c</fullName>
        <description>UL @ibreakingpoint 20151110</description>
        <label>Campaign ID MS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Assistant_Email__c</fullName>
        <label>Campaign Manager Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Campaign Manager Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Objective__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Campaign Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awareness&amp;Consideration</fullName>
                </value>
                <value>
                    <fullName>Demand Generation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Owner_Email__c</fullName>
        <label>Campaign Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Campaign_Owner__c</fullName>
        <description>UL @ibreakingpoint 20151102</description>
        <label>*Campaign Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Province__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Anqing</fullName>
                </value>
                <value>
                    <fullName>Bengbu</fullName>
                </value>
                <value>
                    <fullName>Bozhou</fullName>
                </value>
                <value>
                    <fullName>Chaohu</fullName>
                </value>
                <value>
                    <fullName>Chizhou</fullName>
                </value>
                <value>
                    <fullName>Chuzhou</fullName>
                </value>
                <value>
                    <fullName>Fu3yang</fullName>
                </value>
                <value>
                    <fullName>Hefei</fullName>
                </value>
                <value>
                    <fullName>Huaibei</fullName>
                </value>
                <value>
                    <fullName>Huainan</fullName>
                </value>
                <value>
                    <fullName>Huangshan</fullName>
                </value>
                <value>
                    <fullName>Jieshou</fullName>
                </value>
                <value>
                    <fullName>Liu&apos;an</fullName>
                </value>
                <value>
                    <fullName>Ma&apos;anshan</fullName>
                </value>
                <value>
                    <fullName>Mingguang</fullName>
                </value>
                <value>
                    <fullName>Ningguo</fullName>
                </value>
                <value>
                    <fullName>Su4zhou</fullName>
                </value>
                <value>
                    <fullName>Tianchang</fullName>
                </value>
                <value>
                    <fullName>Tongcheng</fullName>
                </value>
                <value>
                    <fullName>Tongling</fullName>
                </value>
                <value>
                    <fullName>Wuhu</fullName>
                </value>
                <value>
                    <fullName>Xuancheng</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Chongqing</fullName>
                </value>
                <value>
                    <fullName>Changle</fullName>
                </value>
                <value>
                    <fullName>Fu&apos;an</fullName>
                </value>
                <value>
                    <fullName>Fuding</fullName>
                </value>
                <value>
                    <fullName>Fuqing</fullName>
                </value>
                <value>
                    <fullName>Fuzhou</fullName>
                </value>
                <value>
                    <fullName>Jian4yang</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HPE_SFDC_ID__c</fullName>
        <description>UL @ibreakingpoint 20151117</description>
        <externalId>true</externalId>
        <label>HPE SFDC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incremental_Budget__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Incremental Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremental_Name__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Incremental Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIE_Budget__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>MIE Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Marketing Campaign Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Owner__c</fullName>
        <description>UL @breakingpoint.com</description>
        <label>Marketing Campaign Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign_Code__c</fullName>
        <formula>Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Campaign Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign_Name__c</fullName>
        <formula>Parent.Campaign_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign__c</fullName>
        <description>UL @ibreakingpoint 20151030</description>
        <label>*Parent Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <description>UL @ibreakingpoint 20151028</description>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Chongqing</fullName>
                </value>
                <value>
                    <fullName>Fujian</fullName>
                </value>
                <value>
                    <fullName>Gansu</fullName>
                </value>
                <value>
                    <fullName>Guangdong</fullName>
                </value>
                <value>
                    <fullName>Guangxi</fullName>
                </value>
                <value>
                    <fullName>Guizhou</fullName>
                </value>
                <value>
                    <fullName>Hainan</fullName>
                </value>
                <value>
                    <fullName>Hebei</fullName>
                </value>
                <value>
                    <fullName>Heilongjiang</fullName>
                </value>
                <value>
                    <fullName>Henan</fullName>
                </value>
                <value>
                    <fullName>Hubei</fullName>
                </value>
                <value>
                    <fullName>Hunan</fullName>
                </value>
                <value>
                    <fullName>Jiangsu</fullName>
                </value>
                <value>
                    <fullName>Jiangxi</fullName>
                </value>
                <value>
                    <fullName>Jilin</fullName>
                </value>
                <value>
                    <fullName>Liaoning</fullName>
                </value>
                <value>
                    <fullName>Neimenggu</fullName>
                </value>
                <value>
                    <fullName>Ningxia</fullName>
                </value>
                <value>
                    <fullName>Qinghai</fullName>
                </value>
                <value>
                    <fullName>Shaanxi</fullName>
                </value>
                <value>
                    <fullName>Shandong</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Shanxi</fullName>
                </value>
                <value>
                    <fullName>Sichuan</fullName>
                </value>
                <value>
                    <fullName>Tianjin</fullName>
                </value>
                <value>
                    <fullName>Xinjiang</fullName>
                </value>
                <value>
                    <fullName>Xizang</fullName>
                </value>
                <value>
                    <fullName>Yunnan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment1__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>BU</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>GTM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment2__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Sub Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cross</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>CME</fullName>
                </value>
                <value>
                    <fullName>FSI</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>ISS</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>TSC</fullName>
                </value>
                <value>
                    <fullName>TSS</fullName>
                </value>
                <value>
                    <fullName>HPE</fullName>
                </value>
                <value>
                    <fullName>H3C</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>UL @ibreakingpoint 20151125 Changed.</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
                <value>
                    <fullName>Press/Analyst/Influencer</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Media Coop</fullName>
                </value>
                <value>
                    <fullName>WeChat</fullName>
                </value>
                <value>
                    <fullName>Weibo</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Landing page</fullName>
                </value>
                <value>
                    <fullName>SEO/SEM</fullName>
                </value>
                <value>
                    <fullName>Infrastructure &amp; Operations</fullName>
                </value>
                <value>
                    <fullName>Market Intelligence</fullName>
                </value>
                <value>
                    <fullName>Database service</fullName>
                </value>
                <value>
                    <fullName>Contingent labor</fullName>
                </value>
                <value>
                    <fullName>Marketing system</fullName>
                </value>
                <value>
                    <fullName>Virtual event</fullName>
                </value>
                <value>
                    <fullName>Webcast</fullName>
                </value>
                <value>
                    <fullName>Event (Proprietary)</fullName>
                </value>
                <value>
                    <fullName>Partner Event(market with)</fullName>
                </value>
                <value>
                    <fullName>Partner Event(market to)</fullName>
                </value>
                <value>
                    <fullName>Field Sales Enablement</fullName>
                </value>
                <value>
                    <fullName>Sales event</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Account Based event</fullName>
                </value>
                <value>
                    <fullName>Tele-marketing</fullName>
                </value>
                <value>
                    <fullName>e-survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Work_Group__c</fullName>
        <description>UL @ibreakingpoint 20151125</description>
        <label>Sub Work Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Work_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>ISS</fullName>
                </value>
                <value>
                    <fullName>SSD</fullName>
                </value>
                <value>
                    <fullName>TSS</fullName>
                </value>
                <value>
                    <fullName>TSC</fullName>
                </value>
                <value>
                    <fullName>FSI</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>Gpcom</fullName>
                </value>
                <value>
                    <fullName>CME</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>Inside</fullName>
                </value>
                <value>
                    <fullName>Cross</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Bigdata</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Partner lead</fullName>
                </value>
                <value>
                    <fullName>H3C lead</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Budgeted_Cost__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <formula>MIE_Budget__c  +  Alliance_source1_Budget__c  +  Alliance_Source2_Budget1__c  +  Alliance_source3_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budgeted Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>UL @breakingpoint 20151125 changed</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>Branding</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Social media</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Virtual event</fullName>
                </value>
                <value>
                    <fullName>Physical event</fullName>
                </value>
                <value>
                    <fullName>Tele-marketing</fullName>
                </value>
                <value>
                    <fullName>Direct mail</fullName>
                </value>
                <value>
                    <fullName>eDM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>UL @ibreakingpoint 20151027</description>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>